--- a/index.html
+++ b/index.html
@@ -400,6 +400,12 @@
                 let statusBadge = `<span class="px-2 py-0.5 rounded-full text-[7px] font-black ${v.estado === 'Atendido' ? 'bg-green-100 text-green-700' : (v.estado.includes('Pendiente') ? 'bg-purple-100 text-purple-700' : 'bg-slate-200 text-slate-600')}">${v.estado.toUpperCase()}</span>`;
                 const tipoServ = v.esMantenimiento ? '⚙️ MANT.' : (v.tipoAtencion === 'Garantía' ? '🛡️ GARANTÍA' : '🛠️ SERV.TEC');
                 const colorTipo = v.esMantenimiento ? 'text-fix-accent' : (v.tipoAtencion === 'Garantía' ? 'text-fix-blue' : 'text-fix-report');
+                
+                // MEJORA: Validación de dirección para evitar error 404 en el Mapa
+                const mapLink = (v.direccion && v.direccion.toString().includes('http')) 
+                                ? v.direccion 
+                                : 'https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(v.direccion || v.callePrincipal || '');
+
                 return `<tr class="border-b row-hover uppercase font-black">
                     <td class="border-r text-center px-1"><div class="flex flex-col items-center gap-1 admin-only"><div onclick="movePriority('${v.id}', -1)" class="move-btn ${index === 0 ? 'opacity-20 pointer-events-none' : ''}">↑</div><span class="time-badge font-mono">${timeStr}</span><div onclick="movePriority('${v.id}', 1)" class="move-btn ${index === sorted.length - 1 ? 'opacity-20 pointer-events-none' : ''}">↓</div></div><div class="technician-mode-only text-center block md:hidden"><span class="time-badge font-mono">${timeStr}</span></div></td>
                     <td class="border-r px-2 text-[13px] font-black text-fix-blue cursor-pointer truncate max-w-[150px]" onclick="toggleDetail('${v.id}')">${v.nombreCliente}</td>
@@ -407,7 +413,7 @@
                     <td class="border-r px-2 text-center"><div class="text-[6px] ${colorTipo} font-black uppercase tracking-tighter">${tipoServ}</div></td>
                     <td class="border-r text-center font-mono text-slate-400 text-[9px] italic">${initials}</td>
                     <td class="border-r text-center">${statusBadge}</td>
-                    <td class="border-r text-center"><a href="${v.direccion?.indexOf('http') !== -1 ? v.direccion : 'https://www.google.com/maps/search/?api=1&query=' + encodeURIComponent(v.direccion || v.callePrincipal)}" target="_blank" class="bg-fix-light text-white px-3 py-2 rounded-lg text-[8px] font-black shadow-md italic inline-block w-full text-center">📍 MAPA</a></td>
+                    <td class="border-r text-center"><a href="${mapLink}" target="_blank" class="bg-fix-light text-white px-3 py-2 rounded-lg text-[8px] font-black shadow-md italic inline-block w-full text-center">📍 MAPA</a></td>
                     <td class="text-center"><div class="flex justify-center gap-2 items-center p-1"><a href="tel:${v.telefono}" class="text-2xl">📞</a><a href="https://wa.me/593${v.telefono?.replace(/\D/g,'')}" target="_blank" class="text-2xl">💬</a></div></td>
                     ${!currentTechUser ? `<td class="text-center admin-only"><button onclick="openEditModal('${v.id}')" class="bg-fix-blue text-white px-2 py-1 rounded text-[7px] font-black uppercase">EDIT</button></td>` : ''}
                 </tr>
